// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`no extra render on children 1`] = `
<DocumentFragment>
  <div>
    <button>
      Change Parent
    </button>
    parent state: 1
    <div>
      <button>
        Change Store
      </button>
      1
    </div>
  </div>
</DocumentFragment>
`;

exports[`no extra render on children 2`] = `
<DocumentFragment>
  <div>
    <button>
      Change Parent
    </button>
    parent state: 1
    <div>
      <button>
        Change Store
      </button>
      2
    </div>
  </div>
</DocumentFragment>
`;

exports[`no extra render on children 3`] = `
<DocumentFragment>
  <div>
    <button>
      Change Parent
    </button>
    parent state: 2
    <div>
      <button>
        Change Store
      </button>
      2
    </div>
  </div>
</DocumentFragment>
`;

exports[`no extra render on children 4`] = `
<DocumentFragment>
  <div>
    <button>
      Change Parent
    </button>
    parent state: 3
    <div>
      <button>
        Change Store
      </button>
      2
    </div>
  </div>
</DocumentFragment>
`;

exports[`provider initialize 1`] = `
<DocumentFragment>
  <div>
    <button>
      Change
    </button>
    1
  </div>
</DocumentFragment>
`;

exports[`provider initialize 2`] = `
<DocumentFragment>
  <div>
    <button>
      Change
    </button>
    2
  </div>
</DocumentFragment>
`;

exports[`provider initialize with args 1`] = `
<DocumentFragment>
  <div>
    <button>
      Change
    </button>
    5
  </div>
</DocumentFragment>
`;

exports[`provider initialize with args 2`] = `
<DocumentFragment>
  <div>
    <button>
      Change
    </button>
    6
  </div>
</DocumentFragment>
`;

exports[`rerender on dependency update 1`] = `
<DocumentFragment>
  <div>
    <button>
      Change
    </button>
    1
  </div>
</DocumentFragment>
`;

exports[`rerender on dependency update 2`] = `
<DocumentFragment>
  <div>
    <button>
      Change
    </button>
    3
  </div>
</DocumentFragment>
`;

exports[`useStoreState 1`] = `
<DocumentFragment>
  <div>
    <button>
      Change
    </button>
    1
  </div>
</DocumentFragment>
`;

exports[`useStoreState 2`] = `
<DocumentFragment>
  <div>
    <button>
      Change
    </button>
    2
  </div>
</DocumentFragment>
`;
